CHANGES for LIRE
================

2012-11-29
==========
  - Adoptions to test src tree for Lucene 4.0
  - Eliminating errors & optimizing routines
  - Added TestGeneral, confirmed global features, RerankFilter and LSAFilter working.
  - Added utility function for showing results in an image: FileUtils.saveImageResultsToPng(...)

2012-11-27
==========
  - Adoptions to src tree for Lucene 4.0

2012-11-14
==========
  - Adoptions to src tree for Lucene 4.0

2012-09-26
==========
  - Released Lire 0.9.2 & LireDemo 0.9.2

2012-09-25
==========
  - Fixed some bugs in LireDemo browse panel.

2012-08-07
==========
  - Changed parameters in LireDemo

2012-08-06
==========
  - Fixed performance Bug in GenericImageSearcher (new instance per document)
  - Added net.semanticmetadata.lire.utils.StatsUtils
  - Fixed nasty bug in KMeans implementation.

2012-07-23
==========
  - Typo in net.semanticmetadata.lire.indexing.MetricSpacesInvertedListIndexing

2012-07-23
==========
  - Updated libs in samples.
  - Updated build.xml
  - refactored name of surf visual words index field

2012-07-16
==========
  - Updated Lucene to version 3.6
  - Cleaned up directory structure and libraries

2012-02-28
==========
  - Liredemo: Fixed bug in ParallelIndexer.
  - LireDemo release 0.9.1

2012-02-24
==========
  - Added HashingUtils for simple Hashing

2012-02-22
==========
  - Added fix for grey scale only images ready to use in ImageUtils.java

2012-02-21
==========
  - Fixed MSER issues by implementing grey scale conversion & inversion myself.

2011-11-09
==========
  - Optimized k-means to use float[] instead of Histogram removing unnecessary object
    overhead and memory usage
  - Added TopDocsImageSearcher to pre-filter based on lucene searches

2011-11-08
==========
  - Updated to Lucene 3.4.0

2011-11-04
==========
  - Added Method for document creation LocalFeatureHistogramBuilder to allow for queries based on
    documents not in the index.